--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <button id="search-button">Search</button>
         </div>
         <div class="weather" id="weather">
-            <h2 class="city">Weather in <span id="city-name">Durgapur</span></h2>
-            <h1 class="temp" id="temp">45°C</h1>
+            <h2 class="city">Weather in <span id="city-name">Moradabad</span></h2>
+            <h1 class="temp" id="temp">30°C</h1>
             <div class="flex">
                 <img src="" class="icon" id="weather-icon" alt="Weather Icon">
                 <div class="description" id="description">Cloudy</div>
